<?xml version="1.0" encoding="utf-8"?>
<com.zhy.autolayout.AutoLinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".login.activitys.SignInTwoActivity"
    android:orientation="vertical"
    android:background="@color/white"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:fitsSystemWindows="true"
        android:background="@color/background_title"
        >
        <com.hjq.bar.TitleBar
            android:id="@+id/title_bar"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:background="@color/background_title"
            app:title="@string/sign_confimpassword_title"
            app:titleColor="#000000"
            app:titleSize="17sp"
            app:lineColor="@color/background_title"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@mipmap/login_image_one"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:orientation="vertical"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="57dp"
            android:layout_marginTop="15dp"
            android:layout_gravity="center"
            android:orientation="horizontal"
            android:background="@drawable/login_linearlayout_style"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            >
            <ImageView
                android:layout_width="18dp"
                android:layout_height="23dp"
                android:layout_gravity="center"
                android:layout_marginLeft="23dp"
                android:src="@mipmap/login_password"
                />
            <EditText
                android:id="@+id/sing_et_setpassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="21dp"
                android:layout_gravity="center"
                android:hint="@string/sign_setpassword"
                android:lines="1"
                android:maxLines="1"
                android:maxLength="20"
                android:inputType="textPassword"
                android:textSize="14sp"
                android:textColor="@color/Et_hintText"
                android:background="@drawable/login_linearlayout_style"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="57dp"
            android:layout_marginTop="15dp"
            android:layout_gravity="center"
            android:orientation="horizontal"
            android:background="@drawable/login_linearlayout_style"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            >
            <ImageView
                android:layout_width="18dp"
                android:layout_height="23dp"
                android:layout_gravity="center"
                android:layout_marginLeft="23dp"
                android:src="@mipmap/login_password"
                />
            <EditText
                android:id="@+id/sign_et_confirmpassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="21dp"
                android:layout_gravity="center"
                android:hint="@string/sign_confirmpassword"
                android:lines="1"
                android:maxLines="1"
                android:maxLength="20"
                android:inputType="textPassword"
                android:textSize="14sp"
                android:textColor="@color/Et_hintText"
                android:background="@drawable/login_linearlayout_style"
                />
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:layout_gravity="center|left"
        android:orientation="horizontal"
        android:layout_marginLeft="15dp"
        >
        <CheckBox
            android:id="@+id/sign_cb_agree"
            android:layout_width="14dp"
            android:layout_height="14dp"
            android:layout_gravity="center"
            android:layout_marginLeft="23dp"
            android:background="@mipmap/ic_launcher"
            />
        <TextView
            android:id="@+id/sign_tv_agree"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_gravity="center"
            android:text="@string/sign_agree"
            android:textSize="12sp"
            android:textColor="@color/Et_hintText"
            />
        <TextView
            android:id="@+id/sign_tv_agreeservice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_gravity="center"
            android:text="@string/sign_userservice"
            android:textSize="12sp"
            android:textColor="@color/tv_service_code"

            />
    </LinearLayout>
    <Button
        android:id="@+id/sign_btn_sign"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="71dp"
        android:layout_marginLeft="71dp"
        android:layout_marginTop="27dp"
        android:textAllCaps="false"
        android:text="@string/sign_signbtn"
        android:textSize="14sp"
        android:textColor="@color/Tv_text"
        android:background="@drawable/login_btn_style"
        />

    <TextView
        android:id="@+id/sign_tv_hasaccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="31dp"
        android:layout_gravity="center"
        android:text="@string/sign_hasaccout"
        android:textSize="12sp"
        android:textColor="@color/tv_text_style"

        />

</com.zhy.autolayout.AutoLinearLayout>