<?xml version="1.0" encoding="utf-8"?>
<com.zhy.autolayout.AutoLinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".login.activitys.LoginActivity" android:orientation="vertical"
    android:background="@color/white"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:fitsSystemWindows="true"
        android:background="@color/background_title"
        >
        <com.hjq.bar.TitleBar
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:background="@color/background_title"
            app:title="@string/login"
            app:titleColor="#000000"
            app:titleSize="17sp"
            app:backButton="false"
            app:lineColor="@color/background_title"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@mipmap/login_image_one"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:orientation="vertical"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="57dp"
            android:layout_gravity="center"
            android:orientation="horizontal"
            android:background="@drawable/login_linearlayout_style"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            >
            <ImageView
                android:layout_width="16dp"
                android:layout_height="22dp"
                android:layout_gravity="center"
                android:layout_marginLeft="23dp"
                android:src="@mipmap/login_phone_one"
                />
            <EditText
                android:id="@+id/login_et_account"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="23dp"
                android:layout_gravity="center"
                android:hint="@string/account"
                android:lines="1"
                android:maxLines="1"
                android:inputType="phone"
                android:maxLength="11"
                android:textSize="14sp"
                android:textColor="@color/Et_hintText"
                android:background="@drawable/login_linearlayout_style"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="57dp"
            android:layout_marginTop="15dp"
            android:layout_gravity="center"
            android:orientation="horizontal"
            android:background="@drawable/login_linearlayout_style"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            >
            <ImageView
                android:layout_width="18dp"
                android:layout_height="23dp"
                android:layout_gravity="center"
                android:layout_marginLeft="23dp"
                android:src="@mipmap/login_password"
                />
            <EditText
                android:id="@+id/login_et_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="21dp"
                android:layout_gravity="center"
                android:hint="@string/password"
                android:lines="1"
                android:maxLines="1"
                android:inputType="textPassword"
                android:textSize="14sp"
                android:textColor="@color/Et_hintText"
                android:background="@drawable/login_linearlayout_style"
                />
        </LinearLayout>
    </LinearLayout>
    <Button
        android:id="@+id/login_btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="71dp"
        android:layout_marginLeft="71dp"
        android:layout_marginTop="18dp"
        android:textAllCaps="false"
        android:text="@string/login_btn"
        android:textSize="14sp"
        android:background="@drawable/login_btn_style"
        />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="39dp"
        android:layout_marginLeft="39dp"
        android:layout_marginTop="42dp"
        >
        <TextView
            android:id="@+id/login_tv_sign"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:text="@string/sign_account"
            android:textColor="@color/Tv_text"
            />
        <TextView
            android:id="@+id/login_tv_rtpassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:text="@string/retrieve_password"
            android:textColor="@color/Tv_text"
            />
    </RelativeLayout>

    <TextView
        android:id="@+id/login_tv_otherlogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="37dp"
        android:text="@string/other_login"
        android:textColor="@color/Et_hintText" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="67dp"
        android:layout_marginLeft="67dp"
        android:layout_marginTop="42dp"

        >
        <ImageView
            android:id="@+id/login_iv_weibo"
            android:layout_width="32dp"
            android:layout_height="26dp"
            android:layout_alignParentLeft="true"
            android:src="@mipmap/login_sina"

            />
        <ImageView
            android:id="@+id/login_iv_weixin"
            android:layout_width="32dp"
            android:layout_height="26dp"
            android:layout_centerInParent="true"
            android:src="@mipmap/login_wechat"
            />
        <ImageView
            android:id="@+id/login_iv_qq"
            android:layout_width="32dp"
            android:layout_height="26dp"
            android:layout_alignParentRight="true"
            android:src="@mipmap/login_qq"
            />
    </RelativeLayout>

</com.zhy.autolayout.AutoLinearLayout>